# Minotaur

./: CMakeLists.txt  Doxyfile  README.md  TMReader  config.app
docs/html/: _t_m_reader_8c.html  _t_m_reader_8c.js  _t_m_reader_8c_source.html  annotated.html  annotated.js  bug.html  classes.html  config_utils_8c.html  config_utils_8c.js  config_utils_8c_source.html  config_utils_8h.html  config_utils_8h.js  config_utils_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  navtree.css  navtree.js  navtreeindex0.js  pages.html  socket__comms_8c.html  socket__comms_8c.js  socket__comms_8c_source.html  socket__comms_8h.html  socket__comms_8h.js  socket__comms_8h_source.html  struct_config_details.html  struct_config_details.js
docs/html/search/: all_62.js  all_63.js  all_65.js  all_66.js  all_69.js  all_6d.js  all_70.js  all_72.js  all_74.js  all_75.js  classes_63.js  defines_62.js  defines_63.js  files_63.js  files_73.js  functions_61.js  functions_63.js  functions_67.js  functions_6f.js  functions_72.js  functions_73.js  search.css  search.js  typedefs_63.js  variables_62.js  variables_64.js  variables_72.js
src/: CMakeLists.txt  TMReader.c  config.app
src/ConfigUtils/: CMakeLists.txt  configUtils.c  configUtils.h
src/Socket_Comms/: CMakeLists.txt
